--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -2,6 +2,10 @@
   display: flex;
   flex-direction: column;
 
+  section {
+    width: 100%;
+  }
+
   .intro {
     display: flex;
 
@@ -10,7 +14,7 @@
       display: flex;
       position: relative;
       flex-direction: column;
-      justify-content: space-between;
+      justify-content: center;
       align-items: flex-start;
       gap: 50px;
       padding: 120px 60px 120px 120px;
@@ -24,10 +28,10 @@
         .subtitle {
           font-size: calc(22px + (40 - 32) * (100vw - 384px) / (1440 - 384));
         }
-
       }
 
-      .content {}
+      .content {
+      }
 
       .pattern {
         position: absolute;
@@ -35,13 +39,57 @@
         top: 0;
         mix-blend-mode: soft-light;
         opacity: 0.5;
-        height: calc(100vw/5);
+        height: calc(100vw / 5);
+        width: auto;
+        object-fit: contain;
         overflow: hidden;
+      }
+      .dataWrap {
+        color: white;
+        display: flex;
+        max-width: 824px;
+        flex-wrap: wrap;
+        .dataItem {
+          height: 110px;
+          width: 200px;
+          .dataNumber {
+            font-size: calc(32px + (40 - 32) * (100vw - 384px) / (1440 - 384));
+            .unit {
+              font-family: "JetBrains Mono";
+              font-size: calc(
+                12px + (40 - 32) * (100vw - 384px) / (1440 - 384)
+              );
+              font-weight: 700;
+              margin-left: 6px;
+            }
+          }
+          .dataDescription {
+            font-weight: 400;
+            line-height: 29px;
+          }
+        }
       }
     }
 
     .contentWrap.data {
-      background-color: #10375B;
+      background-color: #10375b;
+    }
+  }
+  .photo {
+    content: "";
+    height: calc(100vh - 80px);
+    position: relative;
+    background: url(https://aliyun.sastimg.mxte.cc/images/2022/10/20/_MG_8664.jpg);
+    background-size: cover;
+    background-attachment: fixed;
+    .title {
+      font-family: "JetBrains Mono";
+      font-weight: 700;
+      font-size: calc(32px + (40 - 32) * (100vw - 384px) / (1440 - 384));
+      color: white;
+      position: absolute;
+      top: 42px;
+      left: 120px;
     }
   }
 }
