--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -86,7 +86,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  height: 100%;
+  // height: 100%;
 }
 
 body {
@@ -106,5 +106,5 @@ a {
   }
 }
 #__next{
-  height: 100%;
+  // height: 100%;
 }
