--- a/src/styles/Slide.module.scss
+++ b/src/styles/Slide.module.scss
@@ -60,7 +60,7 @@
       .image {
         object-fit: cover;
         position: relative;
-        width: 100%;
+        width: 50vw;
         height: 100%;
       }
     }
