--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -12,6 +12,8 @@
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
 
+  --safe-width: 2640px;
+
   --primary-glow: conic-gradient(
     from 180deg at 50% 50%,
     #16abff33 0deg,
