--- a/src/components/CTA/CTA.module.scss
+++ b/src/components/CTA/CTA.module.scss
@@ -1,18 +1,19 @@
-.slider {
+.cta {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   height: 100vh;
   width: 100%;
-
+  position: relative;
   .left {
-    width: 50%;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
     display: flex;
     align-items: center;
     z-index: 5;
-    flex-shrink: 0;
 
     .content {
-      padding-left: 120px;
+      padding: 50px;
 
       .title {
         font-weight: 700;
@@ -32,7 +33,7 @@
         border: 3px solid #1c1f23;
         border-radius: 10px;
         background: none;
-        padding: calc(50vw * 0.016) calc(50vw * 0.06);
+        // padding: calc(50vw * 0.5) calc(50vw * 0.06);
         font-weight: 600;
         font-size: calc(22px + (40 - 32) * (50vw - 768px) / (1440 - 384));
         margin-top: 42px;
@@ -48,21 +49,14 @@
   }
 
   .right {
-    width: 50%;
-    z-index: 1;
-    display: flex;
+    width: 100%;
+    height: 100vh;
 
-    .imageWrap {
-      width: max-content;
+    .image {
+      object-fit: cover;
+      position: relative;
+      width: 100%;
       height: 100%;
-      display: flex;
-
-      .image {
-        object-fit: cover;
-        position: relative;
-        width: 50vw;
-        height: 100%;
-      }
     }
   }
 }
