--- a/src/components/card/Card.module.scss
+++ b/src/components/card/Card.module.scss
@@ -9,7 +9,7 @@
   background: #ffffff;
   border: 3px solid #1c1f23;
   border-radius: 10px;
-  max-width: 800px;
+  // max-width: 800px;
   min-width: 300px;
   height: 100%;
   .head{
@@ -19,7 +19,7 @@
   }
   .title {
     font-weight: 590;
-    font-size: calc(16px + (40 - 32) * (100vw - 720px) / (1440 - 384));
+    font-size: calc(24px + (40 - 32) * (100vw - 720px) / (1440 - 384));
     text-transform: capitalize;
     font-feature-settings: "tnum" on, "lnum" on;
   }
