--- a/src/components/slide/Slide.module.scss
+++ b/src/components/slide/Slide.module.scss
@@ -1,16 +1,25 @@
-.cta {
-  display: flex;
+.slider {
+  display: inline-flex;
+  flex-wrap: wrap;
   flex-direction: row;
   height: 100vh;
   width: 100%;
+  position: relative;
 
   .left {
-    width: 50%;
+    // padding: 50px;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    min-width: 40rem;
+    flex-grow: 1;
     display: flex;
     align-items: center;
+    z-index: 5;
+    flex-shrink: 0;
 
     .content {
-      padding-left: 120px;
+      padding: 50px;
 
       .title {
         font-weight: 700;
@@ -28,7 +37,7 @@
       .action {
         color: #1c1f23;
         border: 3px solid #1c1f23;
-        border-radius: 10px;
+        // border-radius: 10px;
         background: none;
         padding: calc(50vw * 0.016) calc(50vw * 0.06);
         font-weight: 600;
@@ -46,13 +55,35 @@
   }
 
   .right {
-    width: 50%;
+    width: 100vw;
+    height: 100vh;
+    min-width: 40rem;
+    flex-grow: 1;
+    z-index: 1;
+    display: flex;
 
-    .image {
-      object-fit: cover;
-      position: relative;
-      width: 100%;
+    .imageWrap {
+      width: max-content;
       height: 100%;
+      display: flex;
+
+      .image {
+        object-fit: cover;
+        position: relative;
+        width: 100vw;
+        height: 100%;
+      }
+    }
+  }
+}
+
+@media (max-width: var(--mobile-breakpoint)) {
+  .slider {
+    .left{
+      .content{
+        padding: 50px;
+        text-wrap: wrap;
+      }
     }
   }
 }
