--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -13,6 +13,7 @@
   --background-end-rgb: 255, 255, 255;
 
   --safe-width: 2640px;
+  --mobile-breakpoint: 960px;
 
   --primary-glow: conic-gradient(
     from 180deg at 50% 50%,
@@ -94,6 +95,7 @@ body {
 body {
   background: white;
   color: var(--normal-black);
+  font-family: sans-serif;
   // font-family: jetbrains-mono;
 }
 
